--- a/blog/styles.css
+++ b/blog/styles.css
@@ -2,8 +2,14 @@ body {
   color: #555;
   margin: 0;
 }
+
 #header {
   background-color: #1abc9c;
   height: 150px;
   line-height: 150px;
+}
+
+#header a {
+  color: white;
+  text-decoration: none;
 }
