--- a/blog/styles.css
+++ b/blog/styles.css
@@ -13,3 +13,16 @@ body {
   color: white;
   text-decoration: none;
 }
+
+#header-title {
+  display: block;
+  float: left;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+#header-nav {
+  display: block;
+  float: right;
+  margin-top: 0;
+}
