--- a/blog/styles.css
+++ b/blog/styles.css
@@ -12,6 +12,9 @@ body {
 #header a {
   color: white;
   text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 0.1em
+}
 }
 
 #header-title {
