--- a/blog/styles.css
+++ b/blog/styles.css
@@ -1,6 +1,10 @@
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+
 body {
   color: #555;
   margin: 0;
+
+  font-family: 'Montserrat', sans-serif;
 }
 
 #header {
