--- a/blog/styles.css
+++ b/blog/styles.css
@@ -109,6 +109,11 @@ h1, h2, h3, h4 {
 p {
   line-height: 1.5;
 }
+
+.about {
+  text-align: center;
+}
+
 .post-container:nth-child(even) {
   background-color: #f2f2f2;
 }
